added key generation html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web app for encrypting 8-bit binary text using Simplified DES Algorithm."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>S-DES Calculator</title>
   </head>
   <body>
